Fix alignment of reaction avatars in comments and reviews (#830)

--- a/source/content.css
+++ b/source/content.css
@@ -397,39 +397,33 @@ we will add it back on for the simple news alerts we decide to show
 }
 
 /* Styles for avatars Refined GitHub adds to Reactions */
-.rgh-reactions a:first-of-type {
-	margin-left: 4px;
-}
-
 .reaction-summary-item {
 	padding-left: 10px !important;
 	padding-right: 10px !important;
 }
-
-.reaction-summary-item.add-reaction-btn {
-	padding-right: 0 !important;
-}
-
-.reaction-summary-item {
-	--background: #FFF;
-}
-
 .reaction-summary-item.user-has-reacted {
 	--background: #f2f8fa;
 }
-
 .reaction-summary-item a {
 	display: inline-block;
 	vertical-align: middle;
-	width: 20px;
-	height: 20px;
+	font-size: 10px; /* Base sizer */
+	width: 2em;
+	height: 2em;
 
 	background: #efefef; /* Placeholder before the images load */
-	box-shadow: 0 0 0 2px var(--background);
+	box-shadow: 0 0 0 2px var(--background, #fff);
 	border-radius: 3px;
 
-	margin-left: -2px;
+	margin-left: -0.2em;
+	margin-top: -0.3em;
 	transition: margin-left 0.2s;
+}
+.reaction-summary-item a:first-of-type {
+	margin-left: 0.5em;
+}
+.review-comment .reaction-summary-item a {
+	font-size: 9px;
 }
 
 /* This image will start at height:0 and will expand once loaded, covering the gray placeholder */
